PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? ????, PHP 8.0.2RC1

- Core:
  . Fixed bug #80523 (bogus parse error on >4GB source code). (Nikita)
  . Fixed bug #80384 (filter buffers entire read until file closed). (Adam
    Seitz, cmb)

- Date:
  . Fixed bug #80376 (last day of the month causes runway cpu usage). (Derick)

- DOM:
  . Fixed bug #80537 (Wrong parameter type in DOMElement::removeAttributeNode
    stub). (Nikita)

- Filter:
  . Fixed bug #80584 (0x and 0X are considered valid hex numbers by
    filter_var()). (girgias)

- GMP:
  . Fixed bug #80560 (Strings containing only a base prefix return 0 object).
    (girgias)

- MySQLi:
  . Fixed bug #67983 (mysqlnd with MYSQLI_OPT_INT_AND_FLOAT_NATIVE fails to
    interpret bit columns). (Nikita)
  . Fixed bug #64638 (Fetching resultsets from stored procedure with cursor
    fails). (Nikita)
  . Fixed bug #72862 (segfault using prepared statements on stored procedures
    that use a cursor). (Nikita)
  . Fixed bug #77935 (Crash in mysqlnd_fetch_stmt_row_cursor when calling an SP
    with a cursor). (Nikita)

- ODBC:
  . Fixed bug #80592 (all floats are the same in ODBC parameters). (cmb)

- PDO_Firebird:
  . Fixed bug #80521 (Parameters with underscores no longer recognized). (cmb,
    Simonov Denis)

- Phar:
  . Fixed bug #76929 (zip-based phar does not respect phar.require_hash).
    (david at bamsoftware, cmb)
  . Fixed bug #77565 (Incorrect locator detection in ZIP-based phars). (cmb)

- Phpdbg:
  . Reverted fix for bug #76813 (Access violation near NULL on source operand).
    (cmb)

07 Jan 2021, PHP 8.0.1

- Core:
  . Fixed bug #80345 (PHPIZE configuration has outdated PHP_RELEASE_VERSION).
    (cmb)
  . Fixed bug #72964 (White space not unfolded for CC/Bcc headers). (cmb)
  . Fixed bug #80391 (Iterable not covariant to mixed). (Nikita)